gin kaptjes in Yper zevve, ja bing :)

--- a/Sint-Moartnskathedroale.mw
+++ b/Sint-Moartnskathedroale.mw
@@ -1,5 +1,5 @@
-{{plat|Ypers}}[[Image:Ieper - Sint-Maartenskathedraal 1.jpg|thumb|De kathedroale met up de vôorground de Leet.]]
-De '''Sint-Moartnskathedroale''' (officieel ''Sint-Maarten en Sint-Niklaaskerk'', no de twêe patrôonilligen van Yper) is e gotische kerke van 102 meiters oge, die ebouwd is tusschn 1230 en 1370 en die in [[Yper]]. Doavoorn wos er e romaansche kerke. 't Is de kathedroale van 't bisdom Yper ewist tusschn 1561 en 1801, nu en is 't dus officieel gin [[kathedroale]] nemi. De kerke die der nu stoat is nie mi d'oorsprounkelikke kerke, dedie is beistn 'n [[Êestn Weireldôorloge|Eestn Oorloge]] kapot ebombardeerd deur de [[Duutsland|Duutschers]]. An de zydskant no 't park en 'n schouwburg toe, kuj nog stikkn van d'oude kerke zien stoan en liggn. De kerke zevve is erbouwd kunn zyn lik dervoorn deurdat heel de stee in koarte ebrocht wos deur architect [[Jules Coomans|Coomans]], die ze tekeniengn meinam toune at 'n 't anzette beisn 'n Oorloge. De fundoaschn zyn nog ossan dezeste lik van d'oorsprounkelikke kerke
+{{plat|Ypers}}[[Image:Ieper - Sint-Maartenskathedraal 1.jpg|thumb|De kathedroale met up de voorground de Leet.]]
+De '''Sint-Moartnskathedroale''' (officieel ''Sint-Maarten en Sint-Niklaaskerk'', no de twee patroonilligen van Yper) is e gotische kerke van 102 meiters oge, die ebouwd is tusschn 1230 en 1370 en die in [[Yper]]. Doavoorn wos er e romaansche kerke. 't Is de kathedroale van 't bisdom Yper ewist tusschn 1561 en 1801, nu en is 't dus officieel gin [[kathedroale]] nemi. De kerke die der nu stoat is nie mi d'oorsprounkelikke kerke, dedie is beistn 'n [[Êestn Weireldôorloge|Eestn Oorloge]] kapot ebombardeerd deur de [[Duutsland|Duutschers]]. An de zydskant no 't park en 'n schouwburg toe, kuj nog stikkn van d'oude kerke zien stoan en liggn. De kerke zevve is erbouwd kunn zyn lik dervoorn deurdat heel de stee in koarte ebrocht wos deur architect [[Jules Coomans|Coomans]], die ze tekeniengn meinam toune at 'n 't anzette beisn 'n Oorloge. De fundoaschn zyn nog ossan dezeste lik van d'oorsprounkelikke kerke
 
 De kerke zevve is groot en 't i vele luxe en da toogt da ze ebouwd is in de goudn joarn van Yper, toune at de loaknindustrie de commerce indeliks deed droain. De loaknalln zyn oek oungeveer in 'n dien tyde ezet. 
 
