*Empty MediaWiki Message*

--- a/Sint-Moartnskathedroale.mw
+++ b/Sint-Moartnskathedroale.mw
@@ -1,12 +1,14 @@
 {{plat|Ypers}}[[Image:Ieper - Sint-Maartenskathedraal 1.jpg|thumb|De kathedroale met up de voorground de Leet.]]
-De '''Sint-Moartnskathedroale''' (officieel ''Sint-Maarten en Sint-Niklaaskerk'', no de twee patroonilligen van Yper) is e gotische kerke van 102 meiters oge, die ebouwd is tusschn 1230 en 1370 en die in [[Yper]]. Doavoorn wos er e romaansche kerke. 't Is de kathedroale van 't bisdom Yper ewist tusschn 1561 en 1801, nu en is 't dus officieel gin [[kathedroale]] nemi. De kerke die der nu stoat is nie mi d'oorsprounkelikke kerke, dedie is beistn 'n [[Êestn Weireldôorloge|Eestn Oorloge]] kapot ebombardeerd deur de [[Duutsland|Duutschers]]. An de zydskant no 't park en 'n schouwburg toe, kuj nog stikkn van d'oude kerke zien stoan en liggn. De kerke zevve is erbouwd kunn zyn lik dervoorn deurdat heel de stee in koarte ebrocht wos deur architect [[Jules Coomans|Coomans]], die ze tekeniengn meinam toune at 'n 't anzette beisn 'n Oorloge. De fundoaschn zyn nog ossan dezeste lik van d'oorsprounkelikke kerke
+De '''Sint-Moartnskathedroale''' (officieel ''Sint-Maarten en Sint-Niklaaskerk'', no de twee patroonilligen van Yper) is e gotische kerke van 102 meiters oge, die ebouwd is tusschn 1230 en 1370 en die in [[Yper]]. Doavoorn wos er e romaansche kerke. 't Is de kathedroale van 't bisdom Yper ewist tusschn 1561 en 1801, nu en is 't dus officieel gin [[kathedroale]] nemi. 
 
 De kerke zevve is groot en 't i vele luxe en da toogt da ze ebouwd is in de goudn joarn van Yper, toune at de loaknindustrie de commerce indeliks deed droain. De loaknalln zyn oek oungeveer in 'n dien tyde ezet. 
 
 Da bisdom ountstound deurda 't bisdom Terwoan, achter dan de abdyen doa te grounde ericht woarn, uut makoar viel in drie aar bisdommn: Boulogne, Saint-Omer en Yper zevve. Binn liggn een van de bekendste bisschoppn (Jansenius) en Robrecht van Bethune (groaf van Vloandern) begroavn.
 
-==Beisn 'n Oorloge==
-Lik de reste van Yper (en de hele Westoek), bleef ter oek van de kathedroale nie vele mir over. [[Image:Ypres_Belgium_NGM-v31-p337-B.jpg|thumb|left|300px|D'omgevienge van de mart beisn 'n Oorloge]]
+==Beisn en achter 'n Oorloge==
+Lik de reste van Yper (en de hele Westoek), bleef ter oek van de kathedroale nie vele mir over. 
+
+De kerke die der nu stoat is nie mi d'oorsprounkelikke kerke, dedie is beistn 'n [[Êestn Weireldôorloge|Eestn Oorloge]] kapot ebombardeerd deur de [[Duutsland|Duutschers]]. An de zydskant no 't park en 'n schouwburg toe, kuj nog stikkn van d'oude kerke zien stoan en liggn. De kerke zevve is erbouwd kunn zyn lik dervoorn deurdat heel de stee in koarte ebrocht wos deur architect [[Jules Coomans|Coomans]], die ze tekeniengn meinam toune at 'n 't anzette beisn 'n Oorloge. De fundoaschn zyn nog ossan dezeste lik van d'oorsprounkelikke kerke[[Image:Ypres_Belgium_NGM-v31-p337-B.jpg|thumb|left|300px|D'omgevienge van de mart beisn 'n Oorloge]]
 
 ==Externe koppelienge==
 *[http://www.westhoek.be/info/ned/parochies/gemeenten/Kerken/ieper-sintmaarten.asp?KID=68&PID=113&GID=6 Meer uutleg over de kathedroale up www.westhoek.be]
