--- a/Sint-Moartnskathedroale.mw
+++ b/Sint-Moartnskathedroale.mw
@@ -14,3 +14,5 @@ De kerke die der nu stoat is nie mi d'oorsprounkelikke kerke, dedie is beistn 'n
 *[http://www.westhoek.be/info/ned/parochies/gemeenten/Kerken/ieper-sintmaarten.asp?KID=68&PID=113&GID=6 Meer uutleg over de kathedroale up www.westhoek.be]
 
 [[Categorie:Yper]]
+
+[[nl:Sint-Maartenskathedraal]]
