*Empty MediaWiki Message*

--- a/Kemmel.mw
+++ b/Kemmel.mw
@@ -18,7 +18,7 @@
 |}}
 '''Kemmel''' is e [[dorp]]sje in de [[België|Belgische]] provinsje [[West-Vloandern]] en e [[dêelgemêente]] van [[Euvelland]]. In de dêelgemêente Kemmel stoat 't [[gemêentuus]] van de fuusjegemêente en zyn de gemêentelikke administratieve dienstn evestigd, juste lik 't [[poliesje]]kantôor en de [[post]]. Kemmel et juuste mêer of 1000 iweuners.
 
-De bynoame van de Kemmelnoars is de ''Goapers'' en by dat schynt zoudt die noame egeevn zyn deur d'[[Yper|Yperliengn]]. 't Zoudt ôois e keir e keirel va Kemmel nor Yper egoan zyn die ezô ounder 'n indruk wos van d'Alletorre da ze mound oopnviel va verwounderienge.
+De bynoame van de Kemmelnoars is de ''Goapers'' en by da 't schynt zoudt die noame egeevn zyn deur d'[[Yper|Yperliengn]]. 't Zoudt ôois e keir e keirel va Kemmel nor Yper egoan zyn die ezô ounder 'n indruk wos van d'Alletorre da ze mound oopnviel va verwounderienge.
 
 == Beziensweirdigheedn ==
 * De [[Kemmelberg]]
