--- a/Dikkebus.mw
+++ b/Dikkebus.mw
@@ -46,9 +46,9 @@ In [[Êeste Weireldoorloge|Êestn Weireldôorloge]] is bykan olles kapot eschoot
 *'''Kerke va Sint-Jan Doper''': neogotisch, erzet achter 'n [[Êeste Weireldoorloge|ôorloge]].
 *'''Vaubantôorn''': tôorn deur [[Vauban]] ezet voun 't sluus en dus 't woater voun de vestiengn van Yper te beschermn.
 *'''Dikkebus Kerremesse''': up 't ende va juni is 't de noamfêeste van Sient-Jan 'n Doper en dus oek kerremesse in Dikkebus. Buutn 'n droaimeuln, e vis- en e schietkroam, zyn der oek nog e mass' aar diengn te doen.
-*'''[[Sinte-Moarten]]''': 'n [[11|efsn]] [[november]] gift Sinte-Moartn speelbucht en sneukelienge an de joenges. 'n Oavend dervôorn is 't er oek e stoet. De jounges loopn toune me koebêetn med e keise in, deur de stroatn ('t zyn oek nog e poar zystroatn en wykn) van Dikkebus, achter Sinte-Moartn, Zworte Piet en 't meziek. De garde lopt ossan vanachtern.
+*'''[[Sinte-Moarten]]''': 'n [[11 (getal)|efsn]] [[november]] gift Sinte-Moartn speelbucht en sneukelienge an de joenges. 'n Oavend dervôorn is 't er oek e stoet. De jounges loopn toune me koebêetn med e keise in, deur de stroatn ('t zyn oek nog e poar zystroatn en wykn) van Dikkebus, achter Sinte-Moartn, Zworte Piet en 't meziek. De garde lopt ossan vanachtern.
 *'''Kestmart''': in december goat de kestmart deure up de grôte boane, olle verênigiengn en commerçantn kunn doa stoan met e kroamtje. 
-*'''Kestboomverbrandieng''': lik in veel aar parochies, is 't er oek in Dikkebus in 't begun van januoari e kestboomverbrandieng, woa dan de kestboomn van up de platse en van byn de menschn tuus upebrand groakn. Vaneigns is er toune oek wel e gloazetje edrounkn.  
+*'''Kestboomverbrandieng''': lik in veel aar parochies, is 't er oek in Dikkebus in 't begun van januoari e kestboomverbrandieng, woa dan de kestboomn van up de platse en van byn de menschn tuus upebrand groakn. Vaneigns is er toune oek wel e gloazetje edrounkn.
 
 == Verênegiengn ==
 === Jeugd ===
