/* Cafés en wienkels van vroeger */

--- a/Dikkebus.mw
+++ b/Dikkebus.mw
@@ -104,12 +104,12 @@ In [[Êeste Weireldoorloge|Êestn Weireldôorloge]] is bykan olles kapot eschoot
 *Café De Sterre: café woa da bêenouwery Rooms nu is
 *'n Café Belge: lag an aarn kant van Café Français, bestoa nemêe
 *'t Vannetje: up 'n oek van de Vyverstroate en de Grôte Boane, en oud café woa dat 'n bibliotheke nog ewist is
-*Café Au Phaisant d'Or: vroegere noame van De Kobbe
+*Café Au Phaisant d'Or: in 'n tyde de noame van De Kobbe
 *Café 't Schôonuus: up 'n ouk van de Grôte Boane en de Klêne Windeweug
-*Café De Vrede: vroeger café up de Neerplatse
-*Café 'n Eird: vroeger café up 'n ouk van de Windeweug en de Zweirdstroate
-*Verklytes: vroeger e wienkel in olles, nu ''De Platse'', e frietekot
-*Verstroates: nu klêerwienkel ''Yellow'', vroeger e villowienkel
+*Café De Vrede: in 'n tyde café up de Neerplatse
+*Café 'n Eird: in 'n tyde café up 'n ouk van de Windeweug en de Zweirdstroate
+*Verklytes: in 'n tyde e wienkel in olles, nu ''De Platse'', e frietekot
+*Verstroates: nu klêerwienkel ''Yellow'', in 'n tyde e villowienkel
 
 ===Eetn en drienkn===
 *Semoelekoekn
