--- a/Sperwer.mw
+++ b/Sperwer.mw
@@ -21,9 +21,9 @@ De veugel koomt vôorn in hêel [[Europa]] en es goe verspreid in oes streke en 
 
 ==Eetn==
 
-[[Image:Sperwer eet duifje.JPG|left|thumb|210px|Vrouwtje van nen Sperwer]]
+[[Image:Sperwer eet duifje.JPG|left|thumb|210px|Vrouwtje van nen sperwer]]
 
-De sperwer eet geirn klêne zangveugels. Ie joagt vôorol ip de uus[[musse]], de [[ringmusse]], de [[koolmêze]], de [[meireloare]], de [[vienke]] en de [[sprêeuwe]]. Ie luste ok en duvetje.
+De sperwer eet geirn klêne zangveugels. Ie joagt vôorol ip de uus[[musse]], de [[ringmusse]], de [[koolmêze]], de [[meireloare]], de [[vienke]] en de [[sprêeuwe]]. Ie meugt ok en duvetje.
 
 ==Leevnswyze==
 Ie makt zyn nestn liefst in [[noaldbôom]]n, ip een ôogte van 5 tot 15 meiter. In mei leggn ze 3 tot 7 eiers, die in 40 doagn uutgebroed weirdn deur de vrouwkes. Een moand achter de geboorte vliegn ze uut et nest, en't deurt ton nog 45 doagn vôor da ze ip udder zelvn keun joagn.
