*Empty MediaWiki Message*

--- a/Stad.mw
+++ b/Stad.mw
@@ -1,7 +1,7 @@
 E '''stad''' of een '''stee''' is e plekke woa dat er [[mens]]chn weunn. Steedn zyn mêestol grote dichtbebouwde plekkn, die 'n invloed en antrekkienge en ip de omliggnde gebiedn. In [[België]] zyn steedn [[gemêente|gemêentn]] die de noame "stad" als titel kunn droagn.
 
 ==Steedn in West-Vloandern==
-In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan da Brugge 't mêeste inweuners et (bykan 120 000) en Mêesn 't minste (round de 1000).
+In West-Vloandern zyn der 22 steedn (in heel [[België]] 133), woavan da Brugge 't mêeste inweuners et (bykan 120 000) en Mêesn 't minste (round de 1000).
 
 <small>Inweunersantalln van 2006</small>
 {| class="prettytable sortable" style="font-size:85%"
@@ -19,7 +19,7 @@ In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan da Brugge '
 |-
 | [[Diksmude]]  ||[[Arrondissement Diksmude|Diksmude]] ||align="right" |15.733 ||align="center" |1825||align="center" |12e eeuw
 |-
-| [[Gistel]]  ||[[Arrondissement Oostende|Ostende]]  ||align="right" |11.125 ||align="center" |1985||align="center" |13e eeuw
+| [[Gistel]]  ||[[Arrondissement Ostende|Ostende]]  ||align="right" |11.125 ||align="center" |1985||align="center" |13e eeuw
 |-
 | [[Kortryk]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |73.657 ||align="center" |1825||align="center" |1127
 |-
@@ -33,9 +33,9 @@ In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan da Brugge '
 |-
 | [[Oarelbeke]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |26.172 ||align="center" |1985||align="center" |1153
 |-
-| [[Ostende]] ||[[Arrondissement Oostende|Ostende]]  ||align="right" |68.931 ||align="center" |1825||align="center" |1267
+| [[Ostende]] ||[[Arrondissement Ostende|Ostende]]  ||align="right" |68.931 ||align="center" |1825||align="center" |1267
 |-
-| [[Oudnburg]] ||[[Arrondissement Oostende|Ostende]] ||align="right" |8.929 ||align="center" |1985||
+| [[Oudnburg]] ||[[Arrondissement Ostende|Ostende]] ||align="right" |8.929 ||align="center" |1985||
 |-
 | [[Poperienge]]  ||[[Arrondissement Yper|Yper]]  ||align="right" |19.623 ||align="center" |1825||align="center" |1147
 |-
