--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -20,7 +20,8 @@ Anno 2007 rydt 'n nog ossan, moa e stapt mêer of, of dat 'n koersn uutrydt. Op 
 * 2004 Fassa Bortolo
 * 2004-2005 MrBookmaker.com-SportsTech
 * 2006 Unibet.com  
-* 2006 Aqua a Sapone
+* 200-2007 Aqua a Sapone
+* 2008 Mitsubishi-Jartazi
 
 ==Palmares==
 ===1994===
