*Empty MediaWiki Message*

--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -4,10 +4,67 @@
 
 '''Frank Vandenbroucke''' ([[Moeskroen]], [[6 november]] [[1974]]) is e [[België|Belgschen]] [[coureur]].
 
-Vandenbroucke, oek wel 'VDB' genoemd, groeide op in [[Ploegsteirt]]. E beguste êerst mi [[atletiek|atletik]]. Op zijn 15 begost 'n mi koersen en op zyn 16 wost 'n ol kampioen by de nieuweliengn. E wos zo goed dat 'n ier en doar e joar van zyn reekse oversloeg.
+Vandenbroucke, ouk wel 'VDB' genoemd, groeide op in [[Ploegsteirt]]. E beguste êerst mi [[atletiek|atletik]]. Op zijn 15 begost 'n mi koersen en op zyn 16 wost 'n ol kampioen by de nieuweliengn. E wos zo goed dat 'n ier en doar e joar van zyn reekse oversloeg.
 
-In 1994 kwam Vandenbroucke prof by Lotto. Olleman zei da VDB de grotste belofte van Belgie wos. Toet 1999 (zyn absoluut topjoar) at 'n 't ene succes achter 't ander, mo in dazeste joar wost 'n verdacht van dopinggebruuk. Sedertien ging 't bergof mi VDB; e kwam zelfs depressief.
-Anno 2007 rydt 'n nog ossan, moa e stapt mêer of, of dat 'n koersn uutrydt. Op 7 juni 2007 rochte bekend da Frank, de dag dervôorn, e zelfmôordpogieng oundernoomn adde. Doarachter begoste VDB an ze zoveelsn ''comeback''.
+In 1994 kwam Vandenbroucke prof by Lotto. Olleman zei da VDB de grotste belofte van Belgie wos. Toet 1999 (zyn absoluut topjoar) at 'n 't êne succes achter 't ander, mo in dazeste joar wost 'n verdacht van dopinggebruuk. Sedertien ging 't bergof mi VDB; e kwam zelfs depressief.
+
+Op 7 juni 2007 rochte bekend da Vandenbroucke, de dag dervôorn, e zelfmôordpogieng oundernoomn adde. Doarachter begoste VDB an ze zoveelsn comeback. Anno 2008 rydt 'n nog ossan, moa e stapt mêer of, of dat 'n koersn uutrydt. In 2008 rêed 'n tout 17 april 2008 vo Mitsubishi-Jartazi, moar op dien dag makte de ploeg bekend da ze (vôorlopig) uut makoar giengn. 
+
+==Palmares==
+===1994===
+* 6de etappe van de Rounde van de Middellansche Zêe
+* Bellegem
+===1995===
+* Parys-Brussel
+* Grote Prijs Cholet-Pays-de-Loire
+* 1ste etappe van de Roende va Luxemburh
+* Oostakker
+* Wielsbeke
+* Zomergem-Adinkerke
+* La Louvière
+===1996===
+* 5de etappe van de Rounde van de Middellansche Zêe
+* proloog, 3e, 6e en 8e etappe van de Rounde van Ôostenryk
+* Trofeo Laiguelia
+* Grote Prys van Plouay
+* [[Scheldeprys]]
+* Binche-Doornik-Binche
+* proloog, 2de en 5de etappe van de Rounde van het Woalsche Gewest
+* [[Wiengne]]
+===1997===
+* 3de etappe van de Rounde van Luxemburg
+* Rounde van Keuln
+* Trofeo Matteotti
+* 2de, 4de en 8ste etappe van de Rounde van Ôostnryk
+* Oalst
+===1998===
+* [[Gent-Wevelgem]]
+* 1ste en 5de etappe en eindklassement Parys-Nice
+* 3de en 6de etappe van de Rounde van het Woalsche Gewest
+* 4de etappe van de Rounde van Galicië
+* GP Villafranca de Ordizia
+* Amiens
+===1999===
+* Puntnklassement in de Rounde van Spanje
+* 16e en 19e etappe van de Rounde van Spanje
+* [[Luuk-Bastenoakn-Luuk]]
+* Omloop 't Volk
+* GP La Marseillaise
+* 4de etappe van de Ruta del Sol
+* 7de etappe van Paris-Nice
+* 3de etappe van de [[Driedoagse van De Panne]]
+===2000===
+* ploegntydrit in de Ster van Bessèges
+===2001===
+gin overwinniengn
+===2002===
+*Erpe-Mere
+===2003===
+*Kortryk
+===2004===
+* GP Zwevegem
+===2005===
+* GP Zwevegem
 
 ==Ploegn==
 * 1994 Lotto-Caloi
@@ -20,76 +77,8 @@ Anno 2007 rydt 'n nog ossan, moa e stapt mêer of, of dat 'n koersn uutrydt. Op 
 * 2004 Fassa Bortolo
 * 2004-2005 MrBookmaker.com-SportsTech
 * 2006 Unibet.com  
-* 200-2007 Aqua a Sapone
+* 2006-2007 Aqua a Sapone
 * 2008 Mitsubishi-Jartazi
-
-==Palmares==
-===1994===
-* 6de etappe van de Rounde van de [[Middellansche Zêe]]
-* Bellegem
-
-===1995===
-* Parys-Brussel
-* Grote Prijs Cholet-Pays-de-Loire
-* 1ste etappe van de Roende va Luxemburh
-* Oostakker
-* Wielsbeke
-* Zomergem-Adinkerke
-* La Louvière
-
-===1996===
-* 5de etappe van de Rounde van de [[Middellansche Zêe]]
-* proloog, 3e, 6e en 8e etappe van de Rounde van [[Ôostenryk]]
-* Trofeo Laiguelia
-* Grote Prys van Plouay
-* [[Scheldeprys]]
-* Binche-Doornik-Binche
-* proloog, 2de en 5de etappe van de Rounde van het Woalsche Gewest
-* [[Wiengne]]
-
-===1997===
-* 3de etappe van de Rounde van [[Luxemburg]]
-* Rounde van Keuln
-* Trofeo Matteotti
-* 2de, 4de en 8ste etappe van de Rounde van [[Ôostnryk]]
-* Oalst
-
-===1998===
-* [[Gent-Wevelgem]]
-* 1ste en 5de etappe en eindklassement Parys-Nice
-* 3de en 6de etappe van de Rounde van het Woalsche Gewest
-* 4de etappe van de Rounde van Galicië
-* GP Villafranca de Ordizia
-* Amiens
-
-===1999===
-* Puntnklassement in de Rounde van Spanje
-* 16e en 19e etappe van de Rounde van Spanje
-* [[Luuk-Bastenoakn-Luuk]]
-* Omloop 't Volk
-* GP La Marseillaise
-* 4de etappe van de Ruta del Sol
-* 7de etappe van Paris-Nice
-* 3de etappe van de [[Driedoagse van De Panne]]
-
-===2000===
-* ploegntydrit in de Ster van Bessèges
-
-===2001===
-gin overwinniengn
-
-===2002===
-*Erpe-Mere
-
-===2003===
-*Kortryk
-
-===2004===
-* GP Zwevegem
-
-===2005===
-* GP Zwevegem
-
 ==Externe koppelienge==
 * [http://www.frankvdbroucke.be Zyn website]
 
