--- a/Yper.mw
+++ b/Yper.mw
@@ -38,7 +38,7 @@
 [[Ofbeeldienge:Vestn_van_Yper.jpg|thumb|<center>De vestn]]
 [[Ofbeeldienge:Sint-Moartnskathedroale_koor.jpg|thumb|<center>De Sint-Moartnskathedroale]]
 
-'''Yper''' (''Nederlans'': Ieper) is de grotste stee van den [[Westhoek]] en de zesde grotste van [[West-Vloandern]]. 't Weunn e klene 35.000 menschn. 
+'''Yper''' (''Nederlans'': Ieper) is de grotste [[stad|stee]] van den [[Westhoek]] en de zesde grotste van [[West-Vloandern]]. 't Weunn e klene 35.000 menschn. 
 
 Vodder èt Yper de twidde grotste mart van België, achter [[Sint-Nikloas]]. De bynoame van Yper is de Kattestad en sedert 't pausbezoek van 1985 oek de Vredesstad. Etwien die in Yper wunt, noemn ze en Yperlienk. Nunder bynoame is en ''Ypers kiendje''.
 [[Ofbeeldienge:Belgie ieper lakenhal nacht.jpg|thumb|left|Loaknalle van Yper (11 okt 2004)]]
