koppelieng na "stad"

--- a/Poperienge.mw
+++ b/Poperienge.mw
@@ -35,7 +35,7 @@
 |datum4=01/01/2006
 |}}
 
-'''Poperienge''' (officieel [[Nederlands]]: ''Poperinge'') is e [[België|Belgische]] steej in [[West-Vloandern]]. 't Weun doar om en by de 19.000 menschen.  Poperienge legt in de [[Westoek]] tegen [[de Schreve]]. 
+'''Poperienge''' (officieel [[Nederlands]]: ''Poperinge'') is e [[België|Belgische]] [[stad|steej]] in [[West-Vloandern]]. 't Weun doar om en by de 19.000 menschen.  Poperienge legt in de [[Westoek]] tegen [[de Schreve]]. 
 't Is ekend voe zyn [[ommel]], een ingrediënt voe bier. 
 
 De bynoame van e Poperienknoare is [[Keikop]].
