--- a/Lo-Rênienge.mw
+++ b/Lo-Rênienge.mw
@@ -34,7 +34,7 @@
 |datum4=01/01/2006
 |}}
 
-'''Lo-Rênienge''' (officieel [[Nederlands]]: ''Lo-Reninge'') is e steej in [[West-Vloandern|West-Vloandern]]. Vanaf 1985 droagt de gemêente de stadstitel.
+'''Lo-Rênienge''' (officieel [[Nederlands]]: ''Lo-Reninge'') is e [[steej]] in [[West-Vloandern|West-Vloandern]]. Vanaf 1985 droagt de gemêente de stadstitel.
 
 == Olgemêen ==
 In Lo-Rênienge weun d'r e goe 3000 menschn, en 't is achter [[Mêesn]] de klêeste steej van [[België]]. 't Is de stad van de [[Jules Destrooper (merk)|Jules Destrooper-koeksjes]] e volgens ounderzoekn de gêestigste gemêente va [[Vloandern]] om in te weunen (bronne: Het Nieuwsblad, 2006).
