koppelieng na "Stad"

--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -40,7 +40,7 @@
 [[Ofbeeldienge:Blankenberge Oosterstaketsel 02.jpg|thumb|<center>d'Estacade me Zeibrugge in de verte]]
 [[Ofbeeldienge:Garnaalboot B72 achterkant.jpg|thumb|<center>Gerestaureerde [[Nôordzêegernoare|gernoarbowt]] B72 (1939) in d'oude visschersoave]]
 [[Ofbeeldienge:Oud Stadhuis 1.jpg|thumb|<center>Oud staduus (1680) in Vlamsche renaissancestyl]]
-'''Blanknberge''' (officieel [[Nederlands]]: ''Blankenberge'') is een kuststadje in [[West-Vloandern]]. 't Is ein van de populairste en drukste plekkn an de [[Vlamsche Kust]]. D’r weunn meir of 18.300 menschn. Blanknberge et ein deilgemeinte: [[Uutkerke]].
+'''Blanknberge''' (officieel [[Nederlands]]: ''Blankenberge'') is een [[stad|stadje]] in [[West-Vloandern]]. 't Is ein van de populairste en drukste plekkn an de [[Vlamsche Kust]]. D’r weunn meir of 18.300 menschn. Blanknberge et ein deilgemeinte: [[Uutkerke]].
 [[Ofbeeldienge:Belgium-blankenberge-beach-1900.jpg|thumb|left|<Center>Blanknberge strange 1900]]
 Je ziet ze van alle kantn kommn noa ‘t strange. In ’t oogsizoen legt den [[NMBS]] zelfs speciale trings in vo de touristn.
 
