koppelieng na "stad"

--- a/Roeseloare.mw
+++ b/Roeseloare.mw
@@ -36,7 +36,7 @@
 |datum3=01/07/2005
 |datum4=01/01/2006
 |}}
-'''Roeseloare''' (Officieel [[Nederlands]]: ''Roeselare'') is een stad die in 't erte van [[West-Vloandern]] ligt. D'r weunn om en by de 55.000 minsen. Roeseloare wordt de Rodenbachstad genoemd.
+'''Roeseloare''' (Officieel [[Nederlands]]: ''Roeselare'') is een [[stad]] die in 't erte van [[West-Vloandern]] ligt. D'r weunn om en by de 55.000 minsen. Roeseloare wordt de Rodenbachstad genoemd.
 ==Dêelgemêentn==
 Buutn Roeseloare-centrum zyn d'r de dêelgemêentn [[Bevern (Roeseloare)|Bevern]], [[Oukne]] en [[Rumbeke]]. D'r zyn ook nog een poar klindere gehuchtjes langst de stêenweg noa [[Mêende]] (N32): [[Zilverberg]] en [[Beitem]].
 
