--- a/Werkn.mw
+++ b/Werkn.mw
@@ -20,7 +20,7 @@
 ==Attraksjes==
 * De [[gotiek|gotische]] Sint-Martinuskerke, geleegn op 't [[neerhof]] van e [[motte]] (den "Hoge Andjoen"). De motte zelve ligt en stik of twientig meter verder.
 * De [[Kruisstraatmeuln]] of [[Berghes meuln]], ne [[stoakmeuln]] uut 1773.
-* Jeugdhus De Zunne. E jeugdhus dat ol e heel ende bestot, mo we weetn ni juste oelange. Vroeger wost in 't oed gemeentus, nu ist in 't oed us van oedn schooldirecteur van de joengesschole. Deur da ze dera go werkn ist nu tiedlijk in doede bibliotheke va Werkn (http://www.jeugdhuisdezunne.be)
+* Jeugdhus De Zunne. E jeugdhus dat ol e heel ende bestot, mo we weetn ni juste oelange. Vroeger wost in 't oed gemeentus, nu ist in 't oed us van oedn schooldirecteur van de joengesschole. Deur da ze dera go werkn ist nu tydlik in d'oede bibliotheke va Werkn 
 <gallery>
 Image:Werken - Sint-Martinuskerk 1.jpg|Sint-Martinuskerke
 Image:Werken - Sint-Martinuskerk 2.jpg|Sint-Martinuskerke en kerkhof
