*Empty MediaWiki Message*

--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -40,7 +40,8 @@
 [[Ofbeeldienge:Blankenberge Oosterstaketsel 02.jpg|thumb|<center>d'Estacade me Zeibrugge in de verte]]
 [[Ofbeeldienge:Garnaalboot B72 achterkant.jpg|thumb|<center>Gerestaureerde [[Nôordzêegernoare|gernoarbowt]] B72 (1939) in d'oude visschersoave]]
 [[Ofbeeldienge:Oud Stadhuis 1.jpg|thumb|<center>Oud staduus (1680) in Vlamsche renaissancestyl]]
-'''Blanknberge''' (officieel [[Nederlands]]: ''Blankenberge'') is een [[stad|stadje]] in [[West-Vloandern]]. 't Is ein van de populairste en drukste plekkn an de [[Vlamsche Kust]]. D’r weunn meir of 18.300 menschn. Blanknberge et ein deilgemeinte: [[Uutkerke]].
+[[Ofbeeldienge: Huisje van Majutte.jpg|thumb|<center>'t Uzetje van Majutte]]
+'''Blanknberge''' (officieel [[Nederlands]]: ''Blankenberge'') is een [[stad|stadje]] in [[West-Vloandern]]. 't Is ein van de populairste en drukste plekkn an de [[Vlamsche Kust]]. D’r weunn meir of 18.300 menschn.
 [[Ofbeeldienge:Belgium-blankenberge-beach-1900.jpg|thumb|left|<Center>Blanknberge strange 1900]]
 Je ziet ze van alle kantn kommn noa ‘t strange. In ’t oogsizoen legt den [[NMBS]] zelfs speciale trings in vo de touristn.
 
@@ -50,6 +51,28 @@ Je ziet ze van alle kantn kommn noa ‘t strange. In ’t oogsizoen legt den [[N
 *[[Blanknbergs Varretje]]
 *[[Groaf-Jansdyk]]
 *[[Roesschaert]]
+
+==Deilgemeintn==
+De gemeinte Blanknberge bestoat uut de deilgemeintn Blanknberge en [[Uutkerke]]. 
+{| border="0" style="border: 1px solid #999; background-color:#FFFFFF"
+|- align="center" bgcolor="#CCCCCC"
+! # !! Noame !! Ippervlakte (km²) !! Bevolkinge
+|- align="right" bgcolor="#efefef"
+|I || align="left" | Blanknberge || 2,61 || &nbsp;
+|- align="right"
+|II || align="left" | [[Uutkerke]] || 14,81 || &nbsp;
+|- align="right" bgcolor="#efefef"
+|}
+
+Blanknberge grenst an:
+*a. [[Lissewege]] me [[Zeebrugge]] en [[Zwankendamme]]
+*b. [[Zuunkerke]] 
+*c. [[Nieuwmunster]] 
+*d. [[Wendune]] 
+
+===Koarte===
+[[Ofbeeldienge:MapBlankenberge.svg|thumb|400px|left|<center>Blanknberge en 't omliggende. De gilwe gebiedn zyn bebouwd.]]
+<br clear="left" />
 
 == Attraksjes ==
 * [[Sea Life Centre]], woa da je kennis makt met 't leevn ounder woater. Je kunt d'r beistn bekykn van over heil de weireld.
@@ -78,9 +101,6 @@ Je ziet ze van alle kantn kommn noa ‘t strange. In ’t oogsizoen legt den [[N
 *Parkklanken: zomerfestival in oopn lucht in ’t Albert I Park, iedere woensdagoavond in juli en augustus
 *Zomershow Crazy World in 't ''Wit Peird'' in juli en augustus. [http://www.witte-paard.be]
 *Blommestoet, iedere latste zundag van augustus
-
-==Deilgemeinte ==
-[[Uutkerke]]
 
 ==Politiek==
 ===Burgemeisters:===
