*Empty MediaWiki Message*

--- a/Groene_puut.mw
+++ b/Groene_puut.mw
@@ -15,6 +15,10 @@
 '''Groene puutn''' zyn e sôorte va [[puut|puutn]] die in hêel [[Europa]] vôornkomn en oek [[West-Vloandern]]. 't Zyn der wel nie zovele lik van 'n [[brune puut]]n. 
 
 De noame groen puut is eigentlik e verzoamelnoame van twêe sôortn puutn en de bastoardn die uut de twêe vorskomn. Beisn 'n latstn [[Ystyd]] zyn de twêe sôortn die ier leevn ountstoan ('n grôotn groen puut (toet 17 cm, AN meerkikker) en 'n klêen groen puut (toet [[7 (getal)|zeevn]] cm, AN poelkikker)), mo ze zyn genetisch zoedoanig gelykig ebleevn, dan ze achter 'n Ystyd nog kusn poarn. 'n Bastoard noemn ze oek wel middelstn groen puut of eetboarn groenn puut en dien is zevve oek vruchtboar. 
+as de trakker vedir ins wurft komt 
+
+as de booer van hûs is, dannse de koein op tefel
+en da moê nic, koein hôre in de boet, ô ín de wei.
 
 ==Uutzicht==
 E groene puut is mêestol [[groen|groene]], mor vou nem te verkenn van e bruun, moe je kykn achter nunder oogn: atter er [[bruun]]-[[zwort]]e plekke is, is 't e bruunn, aars nie. Up nundern rik en ze mêestol e lichtgroene striepe.
