*Empty MediaWiki Message*

--- a/Kôornsaloa.mw
+++ b/Kôornsaloa.mw
@@ -1,4 +1,19 @@
-[[Ofbeeldienge:Veldsla Valerianella olitoria.jpg|right|thumb|150px|Kôornsaloa me rounde bladjes]]'''Kôornsaloa''' (''Valerianella locusta'' of ''Valerianella olitoria'', AN ''Veldsla'') is e sôorte groonsel, die in 'n tyde nie mêer of wiet wos die tusschn de wienterterwe groeide. Ze kommn vôorn in verschillige vormn, oundermêer me lange of me rounde bladjes. 
+{{Taxobox|type=plant
+|naam= Kôornsaloa
+|afbeelding= Veldsla Valerianella olitoria.jpg
+|afbeeldingtekst=Kôornsaloa me rounde bladjes 
+|rijk= [[Planten|''Plantae'']] (Plantn)
+|stam= ''[[Embriophyta]]''  (Landplantn)
+|klasse= ''[[Spermatopsida]]'' (Zoadplantn)
+|orde= ''[[Dipsacales]]'' 
+|familie= ''[[Valerianaceae]]'' (Valerioanplantn)
+|geslacht= ''[[Valerianella]]'' (Kôornsaloa)
+|taxon= [[soort]]
+|w-naam= ''Valerianella locusta''
+|auteur= ([[Carolus Linnaeus|L.]]) [[Augustin Pyramus de Candolle|DC.]]
+|datum= 1805
+}}
+'''Kôornsaloa''' (''Valerianella locusta'' of ''Valerianella olitoria'', AN ''Veldsla'') is e sôorte groonsel, die in 'n tyde nie mêer of wiet wos die tusschn de wienterterwe groeide. Ze kommn vôorn in verschillige vormn, oundermêer me lange of me rounde bladjes. 
 
 ==Verspreidienge==
 Kôornsaloa groeit in 't wilde in [[Europa]], [[Azië]] en Nôord-[[Afrika]], mor oundertusschn groein der oek ol verwilderde sôortn an de ôost- en westkust van [[Amerika]].
@@ -9,6 +24,9 @@ Kôornsaloa ku toet 25 cm oge kommn. Z'is ossan groene va kleur en ze groeit sur
 De gekwikte versche is mêestol in reekn ezet die stief noare van makoar stoan. 't Zyn êenjoarige plantn die nie goed teegn de koude kunn (byn 5 groadn ounder nul vriezn ze dôod). Kôornsaloa is oftewel rauwe oftewel estoofd eetn. 
 
 't Zittn e masse vitamienn en mineroaln in kôornsaloa (vele mêer of in geweune saloa), oundermêer vitamine C, E, B6 en B9, beta-caroteen en omega-3-vetzeurn.
+
+[[Categorie:Groensel]]
+[[Categorie:Valerioanplante]]
 
 [[ca:Canonge]]
 [[de:Gewöhnlicher Feldsalat]]
