--- a/Groene_puut.mw
+++ b/Groene_puut.mw
@@ -24,6 +24,7 @@ en da moê nic, koein hôre in de boet, ô ín de wei.
 E groene puut is mêestol [[groen|groene]], mor vou nem te verkenn van e bruun, moe je kykn achter nunder oogn: atter er [[bruun]]-[[zwort]]e plekke is, is 't e bruunn, aars nie. Up nundern rik en ze mêestol e lichtgroene striepe.
 
 ==Leevnswyze==
+De Leevnswyze van de Groene Puut is meesot tzelfé as de leevnswyze van de brûne puut
 Groene puutn leevn mêestol in 'n omtrek van woater (mêestol me vele groenigeid in en round), 'n grôotn nog mêer of 'n klêenn. Ze joagn doa up olle sôortn fernient, [[slekke|slekkn]] en wormes. De groddere bêestn duvn oek wel e ki [[muus|muuzn]], visschn of aar amfiebieën kokkeduunn.  
 
 'n Klêen puut overwientert mêestol up 't land, 'n grôotn up de ground van e pit.
