--- a/Yper.mw
+++ b/Yper.mw
@@ -47,7 +47,7 @@ Vodder èt Yper de twidde grotste mart van België, achter [[Sint-Nikloas]]. De 
 == Attraksjes==
 Schone pleksjes voe te goan bekykn, zyn: 
 <br clear="left" />
-*de loaknalln
+*de [[Loaknalle|loaknalln]]
 *de [[Sint-Moartnskathedroale|Sint-Moartns]][[kathedroale]]
 *de [[Menepoorte]], woa da ze iedern oavend [[The Last Post]] ('n Last Post) bloazn
 *de vestn of vestiengn, da zyn d'oude verdedigiengsmeurn van [[Vauban]] uut de 17ste eeuwe round 't stee
