/* 'n Dag va vadoage */

--- a/Loaknolle.mw
+++ b/Loaknolle.mw
@@ -27,6 +27,8 @@ Nu zyn de Loaknolln deels gebruukt voun 't museum [[In Flanders Fields]] en deel
 
 In de torre zevve zit er e beioard, woarup dan der twee vaste beioardiers speeln. Met 'n [[Kattestoet]] smyt de stadsnarre van up d'Olletorre speelgoedkattn no beneen (in 'n tyde woarn dadde leevnde kattn).
 
+Up de mart stoat er oek e miniatuur van heel 't gebouw.
+
 [[Categorie:Yper]]
 
 [[de:Tuchhallen (Ypern)]]
