*Empty MediaWiki Message*

--- a/Loaknolle.mw
+++ b/Loaknolle.mw
@@ -1,6 +1,6 @@
 {{plat|Ypers}}
 [[Image:Belgie ieper lakenhal nacht.jpg|240px|thumb|De Loaknolln verlucht, me vavoorn 't barokke Nieuwerck.]]
-De '''Loaknolle''' en zyn torre is 't bekendste gebouw van [[Yper]]. 'n Bouw dervan is begunn round 1260 en 't hele gebouw wos greed in 1304. Ze wos bedoeld voun loakn die anevoerd wos van up d'[[Yperlee]], te verkoopn en te stockeern. De torre en 't westelik gedeelte stoegn der eest, toune doarachter 't oostelik gedeelte. 't Is een van de grotste nie-kerkelikke, gotische gebouwn van [[Europa]].  
+De '''Loaknolle''' en zyn torre is 't bekendste gebouw van [[Yper]]. 'n Bouw dervan is begunn round 1260 en 't hele gebouw wos greed in 1304. Ze wos bedoeld voun loakn die anevoerd wos van up d'[[Yperlee]], te verkoopn en te stockeern. De torre en 't westelik gedeelte stoegn der eest, toune doarachter 't oostelik gedeelte. 't Is een van de grotste nie-kerkelikke, gotische gebouwn van [[Europa]]. De [[Sint-Moartnkathedroale]], die der juuste bachtn stoat, is e bitje vroegerder ezet. 
 
 ==Geschiedenisse==
 ===Bouw===
