--- a/Loaknolle.mw
+++ b/Loaknolle.mw
@@ -18,7 +18,7 @@ Van de 14ste eeuwe vors gienk et vele miender en Yper verloor deur verschillige 
 't Deurde egliek nog en goe 200 joar voun da 't helegans edoan wos.
 
 ===Eestn Weireldoorloge===
-[[Image:Ypres Belgium NGM-v31-p337-B.jpg|thumb|left|250px|De Loaknolln beisn WOI, nog voorn dan ze heel ebombardeerd wos.]]Lik de reste van Yper, kreegn oek d'Olln der ferme van beist 'n [[Êestn Weireldôorloge|Eestn Weireldoorloge]]. Met dat Yper te middn 't frount lei, wos verre olles kapot eschootn deur de [[Duutsland|Duutchers]], ollene eentige meurn van de torre en 't westelik deel stoegn nog rechte. Achter 'n oorloge is heel 't gebouw erzet juuste lik dat van te voorn wos, ounder leidienge van Coomans en Pauwels, twee architectn. An 'n ounderkant kuj nog ossan d'origine steenn zien. 't Nieuwerck is mor in 1962 erzet.
+[[Image:Ypres Belgium NGM-v31-p337-B.jpg|thumb|left|250px|De Loaknolle beisn WOI, nog voorn dan ze heel ebombardeerd wos.]]Lik de reste van Yper, kreegn oek d'Olln der ferme van beist 'n [[Êestn Weireldôorloge|Eestn Weireldoorloge]]. Met dat Yper te middn 't frount lei, wos verre olles kapot eschootn deur de [[Duutsland|Duutchers]], ollene eentige meurn van de torre en 't westelik deel stoegn nog rechte. Achter 'n oorloge is heel 't gebouw erzet juuste lik dat van te voorn wos, ounder leidienge van Coomans en Pauwels, twee architectn. An 'n ounderkant kuj nog ossan d'origine steenn zien. 't Nieuwerck is mor in 1962 erzet.
 
 Deur dat olles in Yper mor van in de joarn 20 van de 20ste eeuwe is, kwam de stee lange nie voorn up de lyste van weirelderfgoed va 'n UNESCO, mor oundertusschn is dadde wel ol gebeurd voun de Loaknolln zevve.
 
