egliek enoeg te zien in Yper dus...

--- a/Yper.mw
+++ b/Yper.mw
@@ -47,13 +47,24 @@ Vodder èt Yper de twidde grotste mart van België, achter [[Sint-Nikloas]]. De 
 == Attraksjes==
 Schone pleksjes voe te goan bekykn, zyn: 
 <br clear="left" />
-*de [[Loaknolle|loaknolln]]
-*de [[Sint-Moartnskathedroale|Sint-Moartns]][[kathedroale]]
-*de [[Menepoorte]], woa da ze iedern oavend [[The Last Post]] ('n Last Post) bloazn
-*de vestn of vestiengn, da zyn d'oude verdedigiengsmeurn van [[Vauban]] uut de 17ste eeuwe round 't stee
-*Yper is oek ekend voe ze rally, de [[Belgium Ypres Westhoek Rally]]. In de vooksmoend: ''De 24 Eurn van Yper''. 'n Rally volt in 't latste weekend va juni. 't Komt doar ossan styf vele vook no kykn.
+*de ''[[Loaknolle|loaknolln]]''
+*de ''[[Sint-Moartnskathedroale|Sint-Moartns]][[kathedroale]]''
+*de ''[[Menepoorte]]'', woa da ze iedern oavend [[The Last Post]] ('n Last Post) bloazn
+*de vestn of vestiengn, da zyn d'oude verdedigiengsmeurn van [[Vauban]] uut de 17ste eeuwe. De vestn en 'n Oorloge oek overleefd, derbeistn woarn de kazemattn gebruukt voun soldoatn met de neuke te verzorn. Nu kunn ze nog bezocht zyn met e gids. 't Zittn oek e masse vleermuuzn en 'n dag va vadoage zyn de vestn ideoal voun e wandeliengsje te moakn.
+*de ''Ryselpoorte'', d'oudste nog betoande poorte van Yper, met e Bourgondische torre uut de 14ste eeuwe
+*'t ''Poortwachtersuus'', en uus die achter de Ryselpoorte stoat en die diende voun de Ryselpoorte te bewoakn. Beist 'n Oorloge zou Moarschalk Plumer tope me zyn officiern ier d'aanvolle van 7 juni 1917 ('n Slag by [[Mêesn]]) voorbereid enn.
+*'n ''Yskelder'', die in de vestn zit, is e koker woarin dat ys, die in de wienter uutezoagd wos, bewoard wos voun de reste van 't joar. 't Diende voun teetn te bewoarn, mor oek voun dokteurs (verdovienge en teegn de kurs).
+*'t ''Kruutmagazyn'', uut 1817 deur d'Ollanders ebouwd. 't Kust 75 000 kilo buskruut liggn. 't Et 'n Oorloge overleefd en 't is 1998 helegans erenoveerd. 
+*''Saint George's Memorial Church'': Anglicoansche kerke van Sir Reginald Blomfield, met e masse zoakn over 'n Eestn Weireldoorloge
+*'t ''Oud Kasselryuus'': an de mart, met medailln die de zeevn oofdzoundn uutbeeldn. 't Is ezet in de 15ste eeuwe en achter 'n Oorloge is 't en endetje staduus ewist.
+*'t ''Steen'': 't enigste steenn uus uut de Middeleeuwn (13ste eeuwe) die nog bestoat. 't Stoat in de Ryselstroate.
+*'t ''Godsuus Belle'': oorsprounkelik van 1616, mor 'n Oorloge oek nie overleefd. Nu zit er museum in me schattn van 't OCMW.
+*'t ''Vleesuus'': de beneenverdiepienge is van 1275, vanboovn zyn de schone trapgeveltjes. Nu zit 't jeugduus en de jeugddienst derin, mo me tyd go 't e museum kommn.
+*de ''Vismart'': van oul de Beuterstroate moej deur e poorte woa da Medusa upstoat (oorsprounkelik uut 1714), a 'n aarn kant stoat er e toluzetje (Minckuzetje), woa dan visverkopers moestn betoaln voun te meugn verkoopn. Up de Vismart zevve zyn der twee ofdaksjes woa dat er in 'n tyde vis verkocht is. Nu is de Vismart e belangryke uutgoansplekke voun de jounge gastn van Yper en omstreekn.
+*'t ''Uus Biebuyck'': uus met e gotischn trapgevel uut 1544. 't Uutzicht doe peizn an uuzn uut Brugge en 't is zounder ol te vele schoa uut 'n Oorloge ekommn.
 *de [[kattestoet]] die olle 3 joare (latste kee in 2006) deuregoat up 'n twiddn zundag van meie
 *in [[Zillebeke]] liggn [[Bellewaerde]] en de [[Poaliengbeke]]
+*Yper is oek ekend voe ze rally, de [[Belgium Ypres Westhoek Rally]]. In de vooksmoend: ''De 24 Eurn van Yper''. 'n Rally volt in 't latste weekend va juni. 't Komt doar ossan styf vele vook no kykn.
 
 == Lokoale gewuntn ==
 'n [[11 november|Elfstn november]] komt [[Sinte-Moarten|Sinte-Moartn]] met ol ze zworte pietn an met ze boote an de koaie, dat is 't ende van 'n voart (d'Yperlee). 't Stoan toene e masse kienders me nunder ouders te wachtn en ze goan toune oltegoare noa 'n Mart. Oek in olle deelgemeentn is er e Sinte-Moartnstoet. De jounges krygn doa sneukelienge (mandarynn, spekeloaschekoekn, schokla, pikkeniekn, ozelievevrouwtjes en sintemoartnskoekn). Up 'n efsn november krygn de meeste jounges toun oek etwot va speelbucht.
