--- a/Loaknolle.mw
+++ b/Loaknolle.mw
@@ -34,3 +34,4 @@ Up de mart stoat er oek e miniatuur van heel 't gebouw.
 [[de:Tuchhallen (Ypern)]]
 [[en:Cloth Hall, Ypres]]
 [[fr:Halles aux draps (Ypres)]]
+[[nl:Lakenhalle van Ieper]]
