*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,1 +1,73 @@
 '''VC Koeban Krasnodar''' is e [[voetbol]]club uut [[Rusland]].
+
+[[af:SK Kuban Krasnodar]]
+[[als:FC Kuban Krasnodar]]
+[[an:CF Kubán Krasnodar]]
+[[ast:Kuban Krasnodar]]
+[[az:Kuban Krasnodar]]
+[[bat-smg:FK Kuban Krasnuodar]]
+[[bcl:FC Kuban Krasnodar]]
+[[be:ФК Кубань (Краснадар)]]
+[[bg:ФК Кубан Краснодар]]
+[[br:CM Kuban Krasnodar]]
+[[bs:FC Kuban Krasnodar]]
+[[ca:FC Kuban Krasnodar]]
+[[co:CP Kuban Krasnodar]]
+[[cs:FK Kubáň Krasnodar]]
+[[cy:CP Cwban Crasnodar]]
+[[da:FC Kuban Krasnodar]]
+[[de:Kuban Krasnodar]]
+[[diq:FC Kuban Krasnodar]]
+[[en:FC Kuban Krasnodar]]
+[[eo:FC Kuban Krasnodar]]
+[[es:FC Kuban Krasnodar]]
+[[et:JK Kuban Krasnodar]]
+[[eu:FT Kuban Krasnodar]]
+[[fi:FK Kuban Krasnodar]]
+[[fo:FS Kuban Krasnodar]]
+[[fr:FK Kuban Krasnodar]]
+[[fy:FK Kuban Krasnodar]]
+[[ga:CS Kuban Kdasnodar]]
+[[gl:CF Kubañ Krasnodar]]
+[[he:קובאן קראסנודר]]
+[[hr:FK Kuban Krasnodar]]
+[[hu:FK Kubány Krasznodar]]
+[[id:FC Kuban Krasnodar]]
+[[io:FK Kuban Krasnodar]]
+[[is:FK Kuban Krasnodar]]
+[[it:Kuban' Krasnodar]]
+[[ja:FCクバン・クラスノダル]]
+[[jv:FC Kuban Krasnodar]]
+[[kk:ФК Кубань Краснодар]]
+[[ku:KF Kuban Krasnodar]]
+[[la:PS Hypanis Crasnodarum]]
+[[lad:KF Kuban Krasnodaro]]
+[[lb:FC Kuban Krasnodar]]
+[[lt:FK Kubanʹ Krasnodar]]
+[[lv:Krasnodaras "Kubaņ"]]
+[[mk:ФК Кубањ Краснодар]]
+[[ms:Kuban Krasnodar]]
+[[mt:KF Kuban Krasnodar]]
+[[nap:Kuban Krasnodar]]
+[[nds:FV Kuban Krasnodar]]
+[[nl:FK Koeban Krasnodar]]
+[[nn:FK Kuban Krasnodar]]
+[[no:FK Kuban Krasnodar]]
+[[oc:CF Kuban Krasnodar]]
+[[pl:Kubań Krasnodar]]
+[[pt:FC Kuban Krasnodar]]
+[[ro:FC Kuban Krasnodar]]
+[[ru:Кубань (футбольный клуб, Краснодар)]]
+[[scn:SC Kuban Krasnodar]]
+[[sco:FC Kuban Krasnodar]]
+[[simple:FC Kuban Krasnodar]]
+[[sk:FK Kubáň Krasnodar]]
+[[sl:NK Kuban Krasnodar]]
+[[sq:KF Kubanj Krasnodar]]
+[[sr:ФК Кубан (Краснодар)]]
+[[sv:FC Kuban Krasnodar]]
+[[tet:FC Kuban Krasnodar]]
+[[tk:Kuban FT]]
+[[tr:FC Kuban Krasnodar]]
+[[uk:Кубань (Краснодар)]]
+[[vi:Kuban Krasnodar]]
