*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,4 +1,4 @@
-'''VC Koeban Krasnodar''' is e [[voetbol]]club uut [[Rusland]].
+'''VC Koeban Krasnodar''' is e [[voetbol]]club uut [[Rusland]], upgericht up [[1928]].
 
 [[af:SK Kuban Krasnodar]]
 [[als:FC Kuban Krasnodar]]
