*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,5 +1,7 @@
 '''VC Koeban Krasnodar''' is e [[voetbol]]club uut [[Rusland]], upgericht up [[1928]].
 
+[[Categorie:Voetbol in Rusland|Koeban]]
+
 [[af:SK Kuban Krasnodar]]
 [[als:FC Kuban Krasnodar]]
 [[an:CF Kubán Krasnodar]]
