--- a/Errewete.mw
+++ b/Errewete.mw
@@ -1,23 +1,37 @@
-[[Ofbeeldienge:Doperwt rijserwt peulen Pisum sativum.jpg|thumb|Erreweten]]
-D' '''errewete''' (''Pisum sativum'') is e [[plante]] uut de [[vlinderblommefamielje]]. Der is indertyd vele genetisch ounderzoek van [[Gregor Mendel]] ip die plantn gedoan.
+{{Taxobox|type=plant
+|naam= Errewete
+|afbeelding= Doperwt rijserwt peulen Pisum sativum.jpg
+|afbeeldingtekst=Erreweten in under peule
+|rijk= [[Planten|''Plantae'']] (Plantn)
+|stam= ''[[Embriophyta]]''  (Landplantn)
+|klasse= ''[[Spermatopsida]]'' (Zoadplantn)
+|orde= ''[[Fabales]]'' 
+|familie= ''[[Fabaceae]]'' (Peulvruchtn)
+|onderfamilie= ''[[Faboideae]]'' (Vlinderblommigen)
+|geslacht= ''[[Pisum]]'' (Errewete)
+|w-naam= ''Pisum sativum''
+|auteur= [[L.]]
+|datum= 1753
+}}
+D' '''errewete''' (''Pisum sativum'') is e [[plante]] uut de vlinderblommefamilie. Der is indertyd vele genetisch ounderzoek van Gregor Mendel ip die plantn gedoan.
 
-De noame erreweten wordt surtoet gebruukt voe de zoaden van die plante. Dat zyn klêne groene bolletjes (6 tot 12 mm diameter), die voe [[groensel]] g'geetn wordn.
+De noame erreweten wordt surtout gebruukt voe de zoaden van die plante. Dat zyn klêne groene bolletjes (6 tot 12 mm diameter), die voe [[groensel]] g'eetn wordn.
 
-Achter da ze getrokken zun wirden de bôonn geprôost om d'erreweten ut de schokken t'oalen. Ze wirden geblancheerd ('n poar menuten gekokt) en ton gestoofd in beuter me 'n bitje [[andjoen]] of sjalotten. Sommigste minsen doen d'er ôok 'n bitje suker bie.
+Achter da ze getrokken zyn wirden de bôonn geprôost om d'erreweten uut de schokken t'oalen. Ze wirden geblancheerd ('n poar minuten gekokt) en ton gestoofd in beuter me 'n bitje [[andjoen]] of sjalotten. Sommigste minsen doen d'er ôok 'n bitje suker by.
 
-Er bestoat ôok n'oantal courante varieteitn:
-* de kapucijner of siererrewete: wit-purperen blommn en en blauwe peule
-* de klênere en plattere varieteit die jounk me schokke en ol ipgegeten wird: de mangetout
+Er bestoat ôok n'oantal courante variëteitn:
+* de kapucyner of siererrewete: wit-purperen blommn en 'n blauwe peule
+* de klênere en plattere variëteit die jounk me schokke en ol ipgeetn wird: de mangetout
 * de grôtere sôorten vô 't bêesteteetn
 
-D'erreweten wirden ôok gedrôogd vô ze beter te kunn bewoaren. Oas ze gedrôogd zun goat ulder velleke gemakkelikker of en klappen we dikwils van spliterreweten.
-* de witte en groene varieteit wordt gebruukt voe in de soepe en puree te mixen
-* de pois chiche es en indische variant in t' wit of in 't zwart, klêner en en mêer uutgesproken notesmoake
+D'erreweten wirden ôok gedrôogd vô ze beter te kunn bewoaren. Oas ze gedrôogd zyn goat ulder velleke gemakkelikker of en klappen we dikwils van spliterreweten.
+* de witte en groene variëteit wordt gebruukt voe in de soepe en puree te mixen
+* de pois chiche es 'n Indische variant in 't wit of in 't zwart, klêner en en mêer uutgesproken notesmoake
 
 Verwant an de erreweteplante is de plante ''Glycyrrhiza glabra'', woavan dat stikkn van de wortel [[kalissie]]stokskes noemn.
 
 [[Categorie:Groensel]]
-[[Categorie:papilionoideae]]
+[[Categorie:Vlinderblommige]]
 
 [[ar:بازلاء]]
 [[br:Piz bihan]]
