*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,4 +1,4 @@
-'''VC Koeban Krasnodar''' is e [[voetbol]]club uut [[Rusland]], upgericht up [[1928]].
+'''VC Koeban Krasnodar''' (in 't Russisch alfabet: ''Футбо́льный клуб "Куба́нь" Краснода́р / Futbol'nij klub Koeban' Krasnodar'') is e [[voetbol]]club uut [[Rusland]], upgericht up [[1928]].
 
 [[Categorie:Voetbol in Rusland|Koeban]]
 [[Categorie:Russische voetbolclub|Koeban]]
