*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,5 +1,10 @@
 '''VC Koeban Krasnodar''' (in 't Russisch alfabet: ''Футбо́льный клуб "Куба́нь" Краснода́р / Futbol'nij klub Koeban' Krasnodar'') is e [[voetbol]]club uut [[Rusland]], upgericht up [[1928]].
 
+== Externe koppelienge ==
+* [http://www.fckuban.ru/ Officieeln website] 
+* [http://greenmile.ru/ Officieeln fanwebsite]
+* [http://www.greenmile.ru/gmforum/index.php?langid=1 Fanforum GREENMILE]
+
 [[Categorie:Voetbol in Rusland|Koeban]]
 [[Categorie:Russische voetbolclub|Koeban]]
 
