--- a/Loaknolle.mw
+++ b/Loaknolle.mw
@@ -30,6 +30,7 @@ In de torre zevve zit er e beioard, woarup dan der twee vaste beioardiers speeln
 Up de mart stoat er oek e miniatuur van heel 't gebouw.
 
 [[Categorie:Yper]]
+[[Categorie:Belfort in West-Vloandern]]
 
 [[de:Tuchhallen (Ypern)]]
 [[en:Cloth Hall, Ypres]]
