*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,4 +1,4 @@
-'''VC Koeban Krasnodar''' (in 't Russisch alfabet: ''Футбо́льный клуб "Куба́нь" Краснода́р / Futbol'nij klub Koeban' Krasnodar'') is e [[voetbol]]club uut [[Krasnodar]], [[Rusland]], upgericht up [[1928]]. Ze speeln in 't [[Koeban stadium]] in [[Krasnodar]].
+'''VC Koeban Krasnodar''' (in 't Russisch alfabet: ''Футбо́льный клуб "Куба́нь" Краснода́р / Futbol'nij klub Koeban' Krasnodar'') is e [[Rusland|Russische]] [[voetbol]]club uut [[Krasnodar]], upgericht up [[1928]]. Ze speeln in 't [[Koeban stadium]] in [[Krasnodar]].
 
 == Externe koppelienge ==
 * [http://www.fckuban.ru/ Officieeln website] 
